zeit.find changes
=================

0.18.1 (unreleased)
-------------------

- Im Volltext ist die vollständige Solr-Syntax verfügbar
  <http://lucene.apache.org/java/2_4_0/queryparsersyntax.html> (#5822).

0.18.0 (2009-10-19)
-------------------

- Die Typen-Suche ist jetzt in einer eigenen Box (#6351).

- Die letzte Suche wird nur noch gespeichert, wenn sich auch etwas geändert
  hat. Durch weniger Schreiboperationen wird die Gesamtgeschwindigket erhöht.

- Suche initial nach Datum sortiert (#6352).

0.17.0 (2009-10-12)
-------------------

- Style-Fixes

- Ausklappzustand der erweiterten Suche und der Filter wird gespeichert und
  wiederhergestellt (#6272).

0.16 (2009-10-06)
-----------------

- Die Suche zeigt jetzt Thumbnails von Bildern an.
- Die Einstellungen der letzten Suche werden gespeichert (#6017).
- Wenn nach ``*:*`` gesucht wird, wird *immer* nach Datum sortiert.

0.15 (2009-09-21)
-----------------

- Erweiterte Suche nach Product

- Erweiterte Suche nach Serie (#5986)

- Es werden jetzt 50 statt 20 Ergebnisse angezeigt.


0.14 (2009-09-09)
-----------------

- Relateds an Suchergebnissen funktionieren wieder.


0.13 (2009-09-02)
-----------------

- Styling

- Es ist jetzt möglich einen Clip in den Favoriten zu haben, ohne dass die
  Suche kaputt geht (#6163).


0.12 (2009-08-21)
-----------------

- Serie, Teaser-Text und Subtitel wird mit angezeigt (#6024).

0.11 (2009-08-14)
-----------------

- Styling

- Favoriten robuster gegen nicht vorhandene Objekte.

0.10 (2009-08-10)
-----------------

- Die Suche ist nun Startseite des CMS (#5857)

0.9 (2009-08-03)
----------------

- Wenn die erweiterte Suche eingeklappt ist, werden die Kriterien klein, als
  Text dargestellt.

- lucenequery nach zeit.solr verschoben.
  
- Link zum Objekt im CMS

0.8 (2009-07-28)
----------------

- Objectchooser mit Suche (#4499).

- Suchfeld macht keine Phrasensuche mehr (#5792).

0.7 (2009-07-22)
----------------

- Moved solr connection (via pysolr) to zeit.solr
