@@ -1,2 +1,0 @@
-<div class="search_result">
-</div>
