@@ -6,6 +6,7 @@ zeit.find changes
 
 - Im Volltext ist die vollständige Solr-Syntax verfügbar
   <http://lucene.apache.org/java/2_4_0/queryparsersyntax.html> (#5822).
+- 'Für diese Seite' entfernt (#6379).
 
 0.18.0 (2009-10-19)
 -------------------
